fix portfolio image layout on mobile

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -100,7 +100,7 @@ h4
 
 .dev-content
   padding: 40px 0px 40px 0px
-  @media screen and (min-width: $xsmall)
+  @media screen and (min-width: $small)
     position: relative
     display: flex
     align-items: center
@@ -119,6 +119,10 @@ h4
 .dev-img
   @media screen and (max-width: $xsmall)
     width: 100%
+
+  @media screen and (min-width: $xsmall) and (max-width: $small)
+    width: 80%
+    margin: auto
 
 #music
   background-image: url('../images/violin-cover-dark.jpg')
